// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationships should render dashboards normally 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="dashboard"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="dashboard"
            size="m"
            type="dashboardApp"
          />
        </EuiToolTip>
          
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiTitle
        size="s"
        textTransform="none"
      >
        <h3>
          <FormattedMessage
            defaultMessage="Related objects"
            id="kbn.management.objects.objectsTable.relationships.relationshipsTitle"
            values={Object {}}
          />
        </h3>
      </EuiTitle>
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "description": "View this saved object within Kibana",
                  "icon": "eye",
                  "name": "In app",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        executeQueryOptions={Object {}}
        items={
          Array [
            Object {
              "id": "1",
              "type": "visualization",
            },
            Object {
              "id": "2",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        sorting={false}
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render errors 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="dashboard"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="dashboard"
            size="m"
            type="dashboardApp"
          />
        </EuiToolTip>
          
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiCallOut
      color="danger"
      size="m"
      title={
        <FormattedMessage
          defaultMessage="Error"
          id="kbn.management.objects.objectsTable.relationships.renderErrorMessage"
          values={Object {}}
        />
      }
    >
      foo
    </EuiCallOut>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render index patterns normally 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="index patterns"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="index patterns"
            size="m"
            type="indexPatternApp"
          />
        </EuiToolTip>
          
        MyIndexPattern*
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiTitle
        size="s"
        textTransform="none"
      >
        <h3>
          <FormattedMessage
            defaultMessage="Related objects"
            id="kbn.management.objects.objectsTable.relationships.relationshipsTitle"
            values={Object {}}
          />
        </h3>
      </EuiTitle>
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "description": "View this saved object within Kibana",
                  "icon": "eye",
                  "name": "In app",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        executeQueryOptions={Object {}}
        items={
          Array [
            Object {
              "id": "1",
              "type": "search",
            },
            Object {
              "id": "2",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        sorting={false}
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render searches normally 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="search"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="search"
            size="m"
            type="search"
          />
        </EuiToolTip>
          
        MySearch
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiTitle
        size="s"
        textTransform="none"
      >
        <h3>
          <FormattedMessage
            defaultMessage="Related objects"
            id="kbn.management.objects.objectsTable.relationships.relationshipsTitle"
            values={Object {}}
          />
        </h3>
      </EuiTitle>
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "description": "View this saved object within Kibana",
                  "icon": "eye",
                  "name": "In app",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        executeQueryOptions={Object {}}
        items={
          Array [
            Object {
              "id": "1",
              "type": "index-pattern",
            },
            Object {
              "id": "2",
              "type": "visualization",
            },
          ]
        }
        pagination={true}
        responsive={true}
        sorting={false}
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render visualizations normally 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader>
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="visualization"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="visualization"
            size="m"
            type="visualizeApp"
          />
        </EuiToolTip>
          
        MyViz
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <div>
      <EuiTitle
        size="s"
        textTransform="none"
      >
        <h3>
          <FormattedMessage
            defaultMessage="Related objects"
            id="kbn.management.objects.objectsTable.relationships.relationshipsTitle"
            values={Object {}}
          />
        </h3>
      </EuiTitle>
      <EuiInMemoryTable
        columns={
          Array [
            Object {
              "align": "center",
              "description": "Type of the saved object",
              "field": "type",
              "name": "Type",
              "render": [Function],
              "sortable": false,
              "width": "50px",
            },
            Object {
              "dataType": "string",
              "description": "Title of the saved object",
              "field": "meta.title",
              "name": "Title",
              "render": [Function],
              "sortable": false,
            },
            Object {
              "actions": Array [
                Object {
                  "available": [Function],
                  "description": "View this saved object within Kibana",
                  "icon": "eye",
                  "name": "In app",
                  "onClick": [Function],
                  "type": "icon",
                },
              ],
              "name": "Actions",
            },
          ]
        }
        executeQueryOptions={Object {}}
        items={
          Array [
            Object {
              "id": "1",
              "type": "dashboard",
            },
            Object {
              "id": "2",
              "type": "dashboard",
            },
          ]
        }
        pagination={true}
        responsive={true}
        sorting={false}
      />
    </div>
  </EuiFlyoutBody>
</EuiFlyout>
`;
